[package]
name = "simple_es"
version = "0.1.0"
authors = ["Benjamin Slater <ben@hackcapital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.10.1", features = ["json"] }
futures = { version = "0.3" }
tokio = "^0.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "^1.3.3"

[dev-dependencies]
mockito = "^0.22"
