[package]
name = "simple_es"
version = "0.2.0"
authors = ["Benjamin Slater <benjamin.ed.slater@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.4", features = ["json"] }
futures = { version = "0.3" }
tokio = { version = "^1.9.0", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "^1.3.3"

[dev-dependencies]
mockito = "^0.30"
